re PR c++/10888 (inlining failure for allocate in ~vector())

PR c++/10888
	* tree-inline.c (expand_call_inline): Do not warn about failing to
	inline functions declared in system headers.
	* doc/invoke.texi (-Winline): Expand on documentation.

	PR c++/10888
	* g++.dg/warn/Winline-2.C: New test.

From-SVN: r68278