gcc/tree-inline.c
@@ -1171,7 +1171,8 @@ expand_call_inline (tp, walk_subtrees, data)
      inlining.  */
   if (!inlinable_function_p (fn, id))
     {
-      if (warn_inline && DECL_INLINE (fn) && !DID_INLINE_FUNC (fn))
+      if (warn_inline && DECL_INLINE (fn) && !DID_INLINE_FUNC (fn)
+	  && !DECL_IN_SYSTEM_HEADER (fn))
 	{
 	  warning_with_decl (fn, "inlining failed in call to `%s'");
 	  warning ("called from here");
